--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 #Tue Oct 03 15:05:21 UTC 2023
-micronaut.application.name=default
+micronaut.application.name=renda-fixa-banking
+micronaut.security.enabled=false
